# TechWordTranslatorMCP-Server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml  run-tests.sh
.docker/dev/: Dockerfile
docs/: api-reference.md  cursor-setup.md  deployment.md  development.md  docker-setup.md  project-summary.md  quickstart.md  testing.md
src/techword_translator/: __init__.py  container.py  formatters.py  server.py  tools.py
src/techword_translator/models/: __init__.py  api.py  word.py
src/techword_translator/services/: __init__.py  api_client.py  search.py  translator.py
tests/: __init__.py  conftest.py  test_api_client.py  test_client.py  test_formatters.py  test_models.py  test_search_service.py  test_server_integration.py  test_translator_service.py
